syntax = "proto3";

import "onnx-ml.proto";
import "error_code.proto";

package onnx.hosting;

message GetModelStatusRequest {
    onnx.ModelProto model_spec = 1;
}

message StatusProto {
    Code error_code = 1 [json_name = "error_code"];
    string error_message = 2 [json_name = "error_message"];
}

message ModelVersionStatus {
    onnx.ModelProto model_spec = 1;
    enum State {
        UNKNOWN = 0;
        AVAILABLE = 30;
    }
    State state = 2;
    StatusProto status = 3;
}

message GetModelStatusResponse {
    repeated ModelVersionStatus model_version_status = 1 [json_name = "model_version_status"];
}